# sphil

./: .bib  .env.example  .eslintrc.json  .gcloudignore  .gitignore  .prettierignore  .prettierrc  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_BIBLIOGRAPHY.md  absolute_bibliography.bib  app.yaml  biome.json  components.json  cspell.json  eslint.config.mjs  library.bib  mdx-components.ts  next.config.js  next.config.mjs  old_theme.config.tsx  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prepyrus_settings.json  tailwind.config.ts  theme.config.tsx  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  artifact_repository_cleanup_policy.json  deploy_script.sh
.github/workflows/: build_pr_template.yaml  cd_dev.yaml  cd_prod.yaml  cd_staging.yaml  dev.yaml  noesis_dev.yaml  pr-labeler.yml  pr_quality_control.yaml  prod.yaml  run_formatting.yaml  staging.yaml  verify_formatting.yaml  verify_mdx_content.yaml
app/: _meta.ts  globals.css  layout.tsx  not-found.ts  page.tsx  proxy.ts  robots.ts  sitemap.ts
app/(user)/: layout.tsx
app/about-us/: page.tsx
app/courses/: page.tsx
app/dashboard/: page.tsx
content/: _meta.ts  acknowledgements.mdx  privacy.mdx  team.mdx  terms-courses.mdx  terms-symposia.mdx
docs/: BIBLIOGRAPHY.md
emails/: PurchaseNotification.tsx  PurchaseReceipt.tsx  SeminarNotification.tsx  SeminarNotificationWithoutLink.tsx
prisma/: schema.prisma
public/: llms.txt
scripts/prepyrus/: Cargo.toml
scripts/prepyrus/src/: inserter.rs  lib.rs  main.rs  utils.rs  validation.rs  validator.rs
(+525 files in other folders)
